# PageNexus

./: .gitattributes  .gitignore  README.md  package.json
.github/workflows/: pagenexus-desktop-build.yml
frontend/src/app/: App.tsx
frontend/src/app/views/: CreateWorkspaceModal.tsx  SettingsView.tsx
frontend/src/components/chat/: useAgentSessionBridge.ts
frontend/src/lib/: api.ts  coding-agent-session.ts  tools.ts  types.ts
node/: coding-agent-rpc.mjs
python/: local_embedder.py  pdf_splitter.py  requirements.txt
scripts/: prepare-python-runtime.ps1  prepare-python-runtime.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
