[package]
name = "pagenexus-desktop"
version = "0.1.0"
description = "PageNexus desktop knowledge-base app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "pagenexus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["clock", "serde"] }
lopdf = "0.35.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
tokio = { version = "1.43.0", features = ["time"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
